--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.travelrequestform">
 
-   <!-- <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>-->
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,10 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelRequestForm">
 
-       <!-- <meta-data android:name="com.google.android.API_KEY"
-            android:value="AIzaSyD10IpMmv30oFrH1iwNvsXkjFx7ZuKCSck"/>-->
-
-        <activity android:name=".ui.mainActivity.MainActivity">
+        <activity android:name=".ui.addTravelActivity.AddTravelActivity" />
+        <activity android:name=".ui.mainActivity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
